overlays/concourse-web-contour-httpproxy.yml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: concourse-web
spec:
  virtualhost:
    fqdn: #@ data.values.concourse.web.external_url.split("//")[1]
    tls:
      secretName: concourse-web-tls
  routes:
  - conditions:
    - prefix: /
    services:
    - name: concourse-web
      port: 8080
    requestHeadersPolicy:
      set:
      - name: X-Forwarded-Proto
        value: https
